test/should-fail/jfxc1629One.visage
/**
 * @subtest
 */

package class jfxc1629One {

  public-read var twub = 333;

  function make() : jfxc1629One {
     twub = 444; // OK
     jfxc1629One {twub: 111} // OK
  }
}
